# graceful-grub

./: .gitignore  CMakeLists.txt  README.md  config-util.h  config.h  grub-mkconfig  grub-reboot  grub-set-default  grub_fstest_init.c  libgrub_a_init.c
core/: CMakeLists.txt  grub-acpi.h  grub-auth.h  grub-autoefi.h  grub-bitmap.h  grub-bitmap_scale.h  grub-btrfs.h  grub-buffer.h  grub-bufio.h  grub-cache.h  grub-cbfs_core.h  grub-charset.h  grub-cmos.h  grub-color.h  grub-command.h  grub-compiler-rt-emu.h  grub-compiler-rt.h  grub-compiler.h  grub-crypto.h  grub-cryptodisk.h  grub-datetime.h  grub-decompressor.h  grub-deflate.h  grub-device.h  grub-disk.h  grub-diskfilter.h  grub-dl.h  grub-dma.h  grub-elf.h  grub-elfload.h  grub-env.h  grub-env_private.h  grub-err.h  grub-exfat.h  grub-extcmd.h  grub-file.h  grub-font.h  grub-fs.h  grub-gfxmenu_view.h  grub-gfxterm.h  (+60 more)
core/cpu/: acpi.c  command.c  dl.c  env.c  err.c  io.h  mm.c  parser.c  pci.h  time.c  vga_init.c
core/cpu/i386/: bsd.h  dl.c  floppy.h  memory.h  multiboot_mmap.c  pit.h  pmtimer.h  time.h  tsc.c  tsc.h  tsc_pit.c  tsc_pmtimer.c
core/cpu/i386/pc/: acpi.c  apm.h  biosdisk.h  biosnum.h  boot.h  chainloader.h  console.h  init.c  int.h  int_types.h  kernel.h  memory.h  mmap.c  pxe.h  startup.S  time.h  vbe.h  vesa_modes_table.h
core/emu/: argp_common.c  cache.c  config.h  console.h  exec.h  full.c  getroot.h  hostdisk.c  hostdisk.h  hostfile.h  hostfs.c  lite.c  main.c  misc.c  misc.h  mm.c  net.h  time.c
core/gnulib/: chdir-long.c  fcntl.c  save-cwd.c
core/kernel/: buffer.c  compiler-rt.c  corecmd.c  device.c  disk.c  disk_common.c  dl.c  elf.c  file.c  fs.c  list.c  lockdown.c  main.c  misc.c  mm.c  partition.c  rescue_parser.c  rescue_reader.c  term.c  verifiers.c  vga_init.c
core/lib/: arg.h
core/net/: arp.h  ethernet.h  ip.h  netbuff.h  tcp.h  udp.h
core/osdep/: hostfile_aros.h  hostfile_unix.h  hostfile_windows.h
core/osdep/basic/: init.c
core/osdep/devmapper/: hostdisk.c
core/osdep/devmapper/.deps-util/: libgrubkern_a-getroot.Po  libgrubkern_a-hostdisk.Po
core/osdep/linux/: blocklist.c  emunet.c  getroot.c  hostdisk.c  ofpath.c  platform.c
core/osdep/unix/: compress.c  config.c  cputime.c  dl.c  emuconsole.c  exec.c  getroot.c  hostdisk.c  password.c  platform.c  random.c  relpath.c  sleep.c
core/osdep/unix/.deps-util/: libgrubkern_a-getroot.Po  libgrubkern_a-hostdisk.Po
core/term/: at_keyboard.c  terminfo.c  tparm.c
core/util/: config.c  install.h  libnvpair.h  libzfs.h  misc.h  mkimage.h  ofpath.h  resolve.h  windows.h
core/zfs/: zfs.h
docs/: Makefile  grub-dev.info  grub.info  grub.info-1  grub.info-2  version-dev.texi
grub-core/: CMakeLists.txt  Makefile  libgnu.cmake  libgrubgcry.cmake  libgrubkern.cmake  libgrubmods.cmake
grub-core/commands/: extcmd.c  extcmd.h  file.c
grub-core/disk/: host.c
grub-core/fs/: affs.c
grub-core/kern/: command.c  env.c
grub-core/kern/emu/: hostfs.c
grub-core/lib/gnulib/: Makefile
grub-core/lib/libgcrypt-grub/cipher/: ChangeLog
grub-core/osdep/basic/: init.c
grub-core/osdep/unix/: config.c  hostdisk.c
include/grub/: command.h  list.h
po/: Makefile  Makefile.in  ast.po  ca.po  da.po  de.po  de@hebrew.po  de_CH.po  en@arabic.po  en@cyrillic.po  en@greek.po  en@hebrew.po  en@piglatin.po  en@quot.po  eo.po  es.po  fi.po  fr.po  gl.po  grub.pot  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lg.po  lt.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  (+4 more)
util/: CMakeLists.txt  grub-bios-setup.cmake  grub-bios-setup.cmake.autosave  grub-editenv.cmake  grub-file.c  grub-file.cmake  grub-fstest.cmake  grub-glue-efi.cmake  grub-install.c  grub-install.cmake  grub-macbless.cmake  grub-menulst2cfg.cmake  grub-mkfont.cmake  grub-mkimage.cmake  grub-mklayout.cmake  grub-mknetdir.cmake  grub-mkpasswd-pbkdf2.cmake  grub-mkrelpath.cmake  grub-mkrescue.cmake  grub-mkstandalone.cmake  grub-mount.cmake  grub-ofpathname.cmake  grub-probe.cmake  grub-render-label.cmake  grub-script-check.cmake  grub-sparc64-setup.cmake  grub-syslinux2cfg.cmake
utils/: CMakeLists.txt  grub-file.c  grub-install-common.c  grub-install.c  misc.c
